implement user-overview module, add fullname to dto and add extra logging

--- a/interview-twitter-ui/src/app/shared/components/navbar/navbar.component.html
+++ b/interview-twitter-ui/src/app/shared/components/navbar/navbar.component.html
@@ -9,6 +9,8 @@
         </li>
         <li routerLinkActive="active"><a routerLink="tweets">Tweets</a>
         </li>
+        <li routerLinkActive="active"><a routerLink="overview/{{getCurrentUser()}}">Overview</a>
+        </li>
       </ul>
     </div>
   </div>
