--- a/interview-twitter-ui/src/app/auth/register/register.component.html
+++ b/interview-twitter-ui/src/app/auth/register/register.component.html
@@ -1,3 +1,24 @@
-<p>
-  register works!
-</p>
+<div class="col-md-6 col-md-offset-3">
+  <h2>Register</h2>
+  <form [formGroup]="form" (ngSubmit)="save(form)">
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input id="username" type="text" class="form-control" formControlName="username"
+             required
+             minlength="1"/>
+    </div>
+    <div class="form-group">
+      <label for="name">Full name</label>
+      <input id="name" type="text" class="form-control" formControlName="name"
+             required
+             minlength="1"/>
+    </div>
+    <div class="form-group">
+      <label for="name">Password</label>
+      <input id="name" type="password" class="form-control" formControlName="password"
+             required
+             minlength="1"/>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
