--- a/interview-twitter-ui/src/app/auth/register/register.component.html
+++ b/interview-twitter-ui/src/app/auth/register/register.component.html
@@ -14,8 +14,8 @@
              minlength="1"/>
     </div>
     <div class="form-group">
-      <label for="name">Password</label>
-      <input id="name" type="password" class="form-control" formControlName="password"
+      <label for="password">Password</label>
+      <input id="password" type="password" class="form-control" formControlName="password"
              required
              minlength="1"/>
     </div>
