--- a/interview-twitter-ui/src/app/auth/register/register.component.html
+++ b/interview-twitter-ui/src/app/auth/register/register.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="col-md-6 col-md-offset-3">
   <h2>Register</h2>
   <form [formGroup]="form" (ngSubmit)="save(form)">
@@ -7,18 +8,22 @@
              required
              minlength="1"/>
     </div>
+    <div *ngIf="isFormSubmittedWithInvalidUsername()" class="help-block">Username is required and/or invalid</div>
     <div class="form-group">
       <label for="name">Full name</label>
       <input id="name" type="text" class="form-control" formControlName="name"
              required
              minlength="1"/>
     </div>
+    <div *ngIf="isFormSubmittedWithInvalidName()" class="help-block">Name is required and/or invalid</div>
     <div class="form-group">
       <label for="password">Password</label>
       <input id="password" type="password" class="form-control" formControlName="password"
              required
              minlength="1"/>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div *ngIf="isFormSubmittedWithInvalidPassword()" class="help-block">Password is required and/or invalid</div>
+    <button type="submit" class="btn btn-primary"
+            [disabled]="form.invalid">Submit</button>
   </form>
 </div>
